feat: add combo recommendations
